volumes/envoy/dev.envoy.yaml
admin:
  access_log_path: /var/log/envoy/admin_access.log
  profile_path: /var/log/envoy/envoy.prof
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                use_remote_address: true
                route_config:
                  name: envoy.filters.network.http_connection_manager
                  virtual_hosts:
                    - name: local_route
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/users"
                          route:
                            cluster: user_service
                            max_grpc_timeout: 0s
                        - match:
                            prefix: "/"
                          route:
                            cluster: web

                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
                  - name: envoy.filters.http.grpc_web

  clusters:
    - name: web
      http2_protocol_options: {}
      type: logical_dns
      connect_timeout: 30s
      lb_policy: round_robin
      load_assignment:
        cluster_name: web
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: web
                      port_value: 3000
    - name: user_service
      http2_protocol_options: {}
      type: logical_dns
      connect_timeout: 10s
      lb_policy: round_robin
      load_assignment:
        cluster_name: user_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: web
                      port_value: 3333

layered_runtime:
  layers:
    - name: static_layer__0
      static_layer:
        envoy:
          resource_limits:
            listener:
              learning_envoy_listener:
                connection_limit: 10000
